# pydesrap_mms

./: .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  LICENSE  README.md  analysis.ipynb  choosing_parameters.ipynb  environment.yaml  hsma.qmd  lint.sh  lint_qmd.sh  model.py  pyproject.toml  requirements.txt  run_notebooks.sh  test_model.py
docs/: heather_2025.md  hsma_changes.md  nhs_rap.md  time_weighted_averages.ipynb
images/: model_structure.drawio  replications_statistics.drawio
inputs/: NHS_synthetic.csv
notebooks/: analysis.ipynb  changes.md  choosing_cores.ipynb  choosing_parameters.ipynb  choosing_replications.ipynb  choosing_warmup.ipynb  generate_exp_results.ipynb  get_parameters.ipynb  input_modelling.ipynb  logs.ipynb  time_weighted_averages.ipynb
outputs/: example_interval_audit.csv  example_overall.csv  example_run.csv  example_trial.csv  scenario_nurse_util.tex  sensitivity_consult_time.tex
scripts/: analysis.ipynb  choosing_parameters.ipynb  generate_exp_results.ipynb
simulation/: __init__.py  confidence_interval_method.py  confidence_interval_method_simple.py  helper.py  logging.py  model.py  monitoredresource.py  onlinestatistics.py  param.py  patient.py  plotly_confidence_interval_method.py  replications.py  replicationsalgorithm.py  replicationtabulizer.py  run_scenarios.py  runner.py  simlogger.py  summary_stats.py
tests/: test_backtest.py  test_backtest_replications.py  test_functionaltest.py  test_functionaltest_replications.py  test_model.py  test_unittest.py  test_unittest_logger.py  test_unittest_model.py  (+1 more)
(+12 files in other folders)
